# CurlSample

./: CMakeLists.txt  README.md  main.cpp
include/cpr/: payload.h
lib/windows/: libcurl_a.lib
